# Stepcount_python_module

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: usage_guide.md
examples/: basic_usage.py  generate_reports.py  multi_city.py
output_demo/: route_report.csv  route_report.json
stepdistance/: __init__.py  calculator.py  cli.py  converter.py  location.py  person.py  reports.py  route.py  utils.py  visualization.py
tests/: __init__.py  test_calculator.py  test_cli.py  test_converter.py  test_location.py  test_person.py  test_reports.py  test_route.py  test_utils.py
