[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "StepDistanceCalculator"
version = "1.0.1"
description = "A Python module that calculates walking step counts between places or cities based on total distance and average step length."
readme = "README.md"
authors = [
    { name = "StepDistanceCalculator Team" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
stepdistance = "stepdistance.cli:main"

[tool.setuptools.packages.find]
include = ["stepdistance*"]
